<resources>
    <string name="app_name">FIT</string>
    <string name="welcome_01">ようこそFITへ</string>
    <string name="welcome_02">FITでは貴方の健康を総合的に管理します</string>
    <string name="welcome_03">最初に「名前」「性別」「生年月日」を登録してください</string>
    <string name="register_button">開始</string>
    <string name="register_button2">ログイン</string>
    <string name="name_label">名前</string>
    <string name="gender_label">性別</string>
    <string name="male_radio">男性</string>
    <string name="female_radio">女性</string>
    <string name="birthday_label">生年月日</string>
    <string name="year_label">年</string>
    <string name="month_label">月</string>
    <string name="day_label">日</string>
    <string name="next_button">次へ</string>
    <string name="profile_label">現在の体型を入力してください。</string>
    <string name="height_label">身長</string>
    <string name="cm_label">cm</string>
    <string name="weight_label">体重</string>
    <string name="kg_label">kg</string>
    <string name="target_weight_label">目標体重</string>
    <string name="activity_level_label">身体活動レベル</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="no_label_1">1</string>
    <string name="no_label_2">2</string>
    <string name="no_label_3">3</string>
    <string name="nav_home">ホーム</string>
    <string name="nav_todolist">やることリスト</string>
    <string name="nav_settings">設定</string>
    <string name="nav_andmore">その他</string>
    <string name="nav_wahtsapp">このアプリについて</string>
    <string name="Intake_calories">摂取カロリー</string>
    <string name="Calorie_consumption">消費カロリー</string>
    <string name="nav_header_title">タイトル</string>
    <string name="nav_header_subtitle">サブタイトル</string>
    <string name="nav_header_desc">説明文</string>
    <string name="action_settings">設定</string>
    <string name="title_activity_home_activity">title_activity_home_activity</string>
    <string name="training_ratio_label">食生活と運動の比率</string>
    <string name="meal_label">食生活</string>
    <string name="training_rabel">運動</string>
    <string name="direction_label">方向性</string>
    <string name="dificulty_label">難易度</string>
    <string name="hatena_button">\?</string>
    <string name="popup">PopupWindow</string>
    <string name="id">plus</string>
    <string name="title_activity_eiyou_main">EiyouMainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="calorie">カロリー</string>
    <string name="food_Nutrients_intro">今日摂取した食事の栄養素</string>
    <string name="protein">タンパク質</string>
    <string name="lipid">脂質</string>
    <string name="carbohydrate">炭水化物</string>
    <string name="calcium">カルシウム</string>
    <string name="iron">鉄分</string>
    <string name="vitaminA">ビタミンA</string>
    <string name="vitaminE">ビタミンE</string>
    <string name="vitaminB1">ビタミンB1</string>
    <string name="vitaminB2">ビタミンB2</string>
    <string name="vitaminC">ビタミンC</string>
    <string name="reference_value">基準値</string>
    <string name="title_activity_training_">Training_Activity</string>
    <string name="training_title_label">今日の運動メニュー</string>
    <string name="training_item_label">運動項目</string>
    <string name="title_activity_select_meal">Select_meal</string>
    <string name="search_meal_label">料理を検索</string>
    <string name="search">検索</string>
    <string name="category">カテゴリ</string>
    <string name="rice">ご飯もの</string>
    <string name="bread">パン類</string>
    <string name="noodle">麺類</string>
    <string name="meat">肉類</string>
    <string name="seafood">魚介類</string>
    <string name="vegetable">野菜類</string>
    <string name="dessert">デザート</string>
    <string name="drink">飲み物</string>
    <string name="title_activity_today__meal_">Today_Meal_Activity</string>
    <string name="Today_meal_menu">今日の食事メニュー</string>
    <string name="meal_add">追加</string>
    <string name="jogging">ジョギング</string>
    <string name="walking">ウォーキング</string>
    <string name="ruinning">ランニング</string>
    <string name="cycling">サイクリング</string>
    <string name="wallWithDog">犬の散歩</string>
    <string name="StairsUpAndDown">階段の上り下り</string>
    <string name="soccer">サッカー</string>
    <string name="basketball">バスケットボール</string>
    <string name="badminton">バドミントン</string>
    <string name="tennis">テニス</string>
    <string name="volleyball">バレーボール</string>
    <string name="catchedball">キャッチボール</string>
    <string name="swimming">水泳</string>
    <string name="pushUps">腕立て伏せ</string>
    <string name="Abdominalmuscles">腹筋</string>
    <string name="spine">背筋</string>
    <string name="squat">スクワット</string>
    <string name="plank">プランク</string>
    <string name="cleanUp">掃除</string>
    <string name="dishWashing">皿洗い</string>
</resources>
