<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/sym_def_app_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_todolist" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item
        android:id="@+id/str_andmore"
        android:title="@string/nav_andmore">
        <menu>
            <item
                android:id="@+id/nav_whatsapp"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_wahtsapp" />
        </menu>
    </item>

</menu>
